--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "watch-sass": "node-sass assets/sass/main.scss assets/css/main.css --watch --source-map-root file://${PWD}/ --source-map-embed true",
-    "compile-sass": "node-sass assets/sass/main.scss assets/css/main.css"
+    "watch-sass": "sass assets/sass/main.scss assets/css/main.css --watch",
+    "compile-sass": "sass assets/sass/main.scss assets/css/main.css"
   },
   "dependencies": {
     "kwesforms": "^2.0.4",
-    "node-sass": "^5.0.0"
+    "sass": "^1.79.3"
   }
 }
